internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
void Go_ReleaseHandle(uint64_t handle);
void C_FreeString(char* value);
void C_FreeMemory(void* value);