internal/generator/output/interop_shared.g.cs

// Code generated by generator. DO NOT EDIT.
using System;
using System.Runtime.InteropServices;

namespace BedrockPlugin.Interop;

[StructLayout(LayoutKind.Sequential)]
public readonly struct GoArray<T> where T : unmanaged
{
    public readonly IntPtr Data;
    public readonly int Length;
    public readonly int ElementSize;

    public GoArray(IntPtr data, int length, int elementSize)
    {
        Data = data;
        Length = length;
        ElementSize = elementSize;
    }

    public unsafe Span<T> AsSpan()
    {
        if (Data == IntPtr.Zero || Length <= 0)
        {
            return Span<T>.Empty;
        }
        if (ElementSize != sizeof(T))
        {
            throw new InvalidOperationException($"Element size mismatch. Native={ElementSize}, Managed={sizeof(T)}");
        }
        return new Span<T>((void*)Data, Length);
    }

    public void Free() => Native.C_FreeMemory(Data);
}

[StructLayout(LayoutKind.Sequential)]
public readonly struct GoArrayNative
{
    public readonly IntPtr Data;
    public readonly int Length;
    public readonly int ElementSize;
}

internal static class InteropHelpers
{
    internal static string ConsumeCString(IntPtr value)
    {
        if (value == IntPtr.Zero)
        {
            return string.Empty;
        }
        try
        {
            return Marshal.PtrToStringUTF8(value) ?? string.Empty;
        }
        finally
        {
            Native.C_FreeString(value);
        }
    }
}

internal static partial class Native
{
    private const string LibraryName = "__Internal";

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void Go_ReleaseHandle(ulong handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void C_FreeString(IntPtr value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void C_FreeMemory(IntPtr value);

}
